--- a/README
+++ b/README
@@ -13,6 +13,6 @@ A screenshot here: http://dl.dropbox.com/u/11392968/ppub.png
 
 Bookmarks are matched with the MD5 hash of each book so they are valid even if you rename or move your books.
 
-Default cache location is /tmp/ppub-cache/, you can change it by editing the configuration file (~/.ppub). If you do, keep the trailing '/' in the path.
+Default cache location is /tmp/ppub-cache-[username]/, you can change it by editing the configuration file (~/.ppub). If you do, keep the trailing '/' in the path.
 
 In case you have a book that is not working, please extract your epub file like a zip and send me any .opf and .ncx files it has inside. I will do my best to fix the problem then :).
