--- a/README
+++ b/README
@@ -20,6 +20,7 @@ Features:
 
 A screenshot here: http://dl.dropbox.com/u/11392968/ppub.png
 
+Sorry for the general lack of updated lately, I've been busy with school (and Skyrim) and didn't find much time to work on this. But the project isn't abandoned.
 
 Installation:
 -For archlinux: Install ppub from AUR.
